// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search component Component renders as expected when error returned When component loads, shows 'error' message and renders as expected 1`] = `
<div>
  <div
    class="ui negative message"
  >
    <div
      class="header"
    >
      Something has gone wrong with your search
    </div>
    <a
      href="/"
    >
      Start again
    </a>
  </div>
</div>
`;

exports[`Search component Component renders as expected when searching When component loads, shows 'searching' message and renders as expected 1`] = `
<div>
  <div>
    <div
      class="content"
    >
      <div
        class="ui massive active text inline loader"
        data-testid="searchingSpinner"
      >
        Searching...
      </div>
    </div>
  </div>
  <a
    href="/"
  >
    Start again
  </a>
</div>
`;

exports[`Search component Component renders as expected when searching complete After component loaded, clicking on accept dispatches action and navigates to display 1`] = `
<div>
  <div>
     
    <div>
      <img
        alt="preview of search result"
        class="preview"
        data-testid="imageElement"
        src="http://tempuri/cars/1"
      />
    </div>
    <div>
      <button
        class="button"
        data-testid="acceptBtn"
      >
        Accept
      </button>
      <button
        class="button-decline"
        data-testid="declineBtn"
      >
        Decline
      </button>
    </div>
  </div>
  <a
    href="/"
  >
    Start again
  </a>
</div>
`;

exports[`Search component Component renders as expected when searching complete After component loaded, clicking on decline generates a new image 1`] = `
<div>
  <div>
     
    <div>
      <img
        alt="preview of search result"
        class="preview"
        data-testid="imageElement"
        src="http://tempuri/cars/1"
      />
    </div>
    <div>
      <button
        class="button"
        data-testid="acceptBtn"
      >
        Accept
      </button>
      <button
        class="button-decline"
        data-testid="declineBtn"
      >
        Decline
      </button>
    </div>
  </div>
  <a
    href="/"
  >
    Start again
  </a>
</div>
`;

exports[`Search component Component renders as expected when searching complete After component loaded, clicking on decline generates a new image 2`] = `
<div>
  <div>
     
    <div>
      <img
        alt="preview of search result"
        class="preview"
        data-testid="imageElement"
        src="http://tempuri/cars/2"
      />
    </div>
    <div>
      <button
        class="button"
        data-testid="acceptBtn"
      >
        Accept
      </button>
      <button
        class="button-decline"
        data-testid="declineBtn"
      >
        Decline
      </button>
    </div>
  </div>
  <a
    href="/"
  >
    Start again
  </a>
</div>
`;

exports[`Search component Component renders as expected when searching complete When component loads, shows imageu and renders as expected 1`] = `
<div>
  <div>
     
    <div>
      <img
        alt="preview of search result"
        class="preview"
        data-testid="imageElement"
        src="http://tempuri/cars/1"
      />
    </div>
    <div>
      <button
        class="button"
        data-testid="acceptBtn"
      >
        Accept
      </button>
      <button
        class="button-decline"
        data-testid="declineBtn"
      >
        Decline
      </button>
    </div>
  </div>
  <a
    href="/"
  >
    Start again
  </a>
</div>
`;
